--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<DOCTYPE HTML>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Hello, Welcome to Domain 1!</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
