--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <h1>Hello, Welcome to Domain 1!</h1>
 <h2>Domain 1: HTML Fundamentals</h2>
-<p>My first paragraph.</p>
+<ul>
+  <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
+</ul>
 
 </body>
 </html>
