--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h2>Domain 1: HTML Fundamentals</h2>
 <ul>
   <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
+  <li><a href="Domain 1/MusicStore1/11c-scripts.html"> Script and Noscript Tags </a></li>
+  <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
 </ul>
 
 </body>
