--- a/Domain 3/MusicStore3/31a-hours.html
+++ b/Domain 3/MusicStore3/31a-hours.html
@@ -5,7 +5,33 @@
     <title></title>
 </head>
 <body>
-    Hours of operation
-    
+    <h1>Hours of operation</h1>
+
+    <table border="1">
+        <tr>
+            <th>Day</th>
+            <th>Hours</th>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>9:00 AM – 5:00 PM</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>9:00 AM – 5:00 PM</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>9:00 AM – 5:00 PM</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>9:00 AM – 5:00 PM</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>9:00 AM – 5:00 PM</td>
+        </tr>
+    </table>
 </body>
 </html>
