--- a/Domain 3/MusicStore3/31a-hours2.html
+++ b/Domain 3/MusicStore3/31a-hours2.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     Hours of operation
-    <table>
+     <table border="1" style="border-collapse: collapse;">
+   
         <tr>
             <td>Days </td>
             <td>Hours </td>
@@ -25,7 +26,7 @@
         </tr>
         <tr>
             <td>Hours vary on holidays </td>
-            <td></td>
+            <td colspan="2">Hours vary on holidays</td>
         </tr>
     </table>
 </body>
