--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
   <li><a href="Domain 1/MusicStore1/11c-scripts.html"> Script and Noscript Tags </a></li>
   <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
+ <li><a href="Domain 3/MusicStore3/31a-hours.html"> Lists 1 </a></li>
+ <li><a href="Domain 3/MusicStore3/31a-hours2.html"> Table 2 </a></li>
+
+
+
+
+
+  
 </ul>
 
 </body>
