--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
   <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
   <li><a href="Domain 1/MusicStore1/11c-scripts.html"> Script and Noscript Tags </a></li>
   <li><a href="Domain 1/MusicStore1/11a-scripts.html"> Script and Noscript Tags </a></li>
- <li><a href="Domain 3/MusicStore3/31a-hours.html"> Lists 1 </a></li>
- <li><a href="Domain 3/MusicStore3/31a-hours2.html"> Table 2 </a></li>
+  <br>
 
+<h1>Hello, Welcome to Domain 2!</h1>
+<h2>Domain 2: CSS Rule Sets</h2>
+<br>
+  
+<h1>Hello, Welcome to Domain 3!</h1>
+<h2>Domain 3: Structure Content Through Markup!</h2>
+  <li><a href="Domain 3/MusicStore3/31a-hours.html"> Lists 1 </a></li>
+   <li><a href="Domain 3/MusicStore3/31a-hours2.html"> Table 2 </a></li>
 
 
 
