--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
+<body style="background-color: lightpink;">
 <h1> Careshma Roopnarine - Domain Excerises from Workbook</h1>
   <br>
 <h1>Hello, Welcome to Domain 1!</h1>
